# embive-c-template

./: CMakeLists.txt  README.md
include/: embive.h
src/: embive.c  entry.s  main.c
